--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
         </div>
         <div id="color-container">
             <!--Iteration 2: Build the coloring buttons -->
+             <div>
+                <input type="color" id="button-face-plate" value="#ffffff"></input>
+                <p>Face plate</p>
+            </div>
+                  <div>
+                <input type="color" id="button-helmet" value="#ffffff"></input>
+                <p>Helmet</p>
+            </div>
+            <div>
+                <input type="color" id="button-eyes" value="#ffffff">
+              </input>
+                <p>Eyes</p>
+            </div>
+            <div>
+                <input type="color" id="button-background" value="#ffffff"></input>
+                <p>Background</p>
+            </div>
         </div>
         <div class="line"></div>
         <p id="made-with-love">
